# Serenity

./: Cargo.toml  benchmarks.txt  database.db  test.py  todo.md
Serenity Development/.obsidian/: workspace.json
Serenity Development/Application Architecture/Networking/: Client-Server Model.md  Database.md
Serenity Development/Application Architecture/Networking/Security/: Auth.md  Encryption.md
src/: main.rs
src/blockchain/: block.rs  core.rs  hashing.rs  transaction.rs  transaction_pool.rs  wallet.rs
src/blockchain/db/: core.rs  tables.rs
src/blockchain/db/mongodb/: core.rs
src/blockchain/web/: core.rs
src/utils/: calculations.rs  logging.rs
tests/: mining_test.rs
