[package]
name = "Serenity"
version = "0.1.0"
edition = "2021"

[dependencies]
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
ecdsa = "0.16.9"
env_logger = "0.11.5"
hex = "0.4.3"
log = "0.4.22"
futures = "0.3.28"
rand = "0.8.5"
ring = "0.17.8"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
sha2 = "0.10.8"
rocket = { version = "0.5.1", features = ["json"] }
tokio = {version = "1.39.3", features = ["full"]}
warp = "0.3.7"
fern = { version = "0.5", features = ["colored"] }
fern_colored = "0.6.1"
chrono = "0.4.38"
humantime = "2.1.0"
r2d2 = "0.8.10"
r2d2_sqlite = { version = "0.25.0", features = ["bundled"] }
mongodb = {version = "3.0.1"}
